# bibliotheque

./: CMakeLists.txt  ReadMe.md
bibliotheque/: CMakeLists.txt  bibliotheque.cpp  bibliotheque.h
bibliotheque/include/: point.h  screen.h
bibliotheque/src/: main.c  main.cpp  point.c  screen.c
include/: color.h  point.h
src/: screen.c
